...
import com.android.gatherly.utils.ParticipantsUiState
import com.android.gatherly.utils.TimeInputField
import kotlinx.coroutines.delay

/** Test tags for the AddEventScreen composable, used to identify UI elements during testing. */
object AddEventScreenTestTags {
  const val LAZY_LIST = "LAZY_LIST"
  const val INPUT_NAME = "EVENT_NAME"
  const val INPUT_DESCRIPTION = "EVENT_DESCRIPTION"
  const val INPUT_LOCATION = "EVENT_LOCATION"
  const val LOCATION_SUGGESTION = "EVENT_LOCATION"
  const val INPUT_DATE = "EVENT_DATE"
  const val INPUT_START = "EVENT_START_TIME"
  const val INPUT_END = "EVENT_END_TIME"
  const val BTN_SAVE = "EVENT_SAVE"
  const val ERROR_MESSAGE = "EVENT_ERROR_MESSAGE"
  const val INPUT_PARTICIPANT = "EVENT_PARTICIPANT_SEARCH"
  const val PARTICIPANT_MENU = "PARTICIPANT_MENU"
  const val LOCATION_MENU = "LOCATION_MENU"
  const val SWITCH_PUBLIC_PRIVATE_EVENT = "EVENT_SWITCH_PUBLIC_PRIVATE"
  const val BUTTON_PRIVATE_FRIENDS_EVENT = "EVENT_BUTTON_PRIVATE_FRIENDS"
...
