...
import com.google.android.gms.location.LocationServices
import java.util.Locale
import kotlinx.coroutines.launch

object EventsScreenTestTags {

  const val ALL_LISTS = "EventsLists"

  const val CREATE_EVENT_BUTTON = "CreateANewEvent"

  const val EMPTY_BROWSER_LIST_MSG = "EmptyBrowserEvents"

  const val EMPTY_UPCOMING_LIST_MSG = "EmptyUpcomingEvents"

  const val EMPTY_OUREVENTS_LIST_MSG = "EmptyOurEvents"

  const val BROWSE_TITLE = "TitleBrowserEvents"

  const val UPCOMING_TITLE = "TitleUpcomingEvents"

  const val YOUR_EVENTS_TITLE = "TitleYourEvents"

  const val EVENT_DATE = "EventDate"

  const val EVENT_TITLE = "EventTitle"

  const val EVENT_STATUS_INDICATOR_UPCOMING = "EventStatusIndicatorGreen"
  const val EVENT_STATUS_INDICATOR_ONGOING = "EventStatusIndicatorYellow"
  const val EVENT_STATUS_INDICATOR_PAST = "EventStatusIndicatorGrey"

  const val FILTER_UPCOMING_BUTTON = "FilterUpcomingButton"
...
